--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
       </div>
       <div class="hero-image-container">
-        <img class="hero-image" src="/assets/programmer.png"/>
+        <img class="hero-image" src="assets/programmer.png"/>
       </div>
       <svg class="hero-section-seperator" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path fill="#0099ff" fill-opacity="1" d="M0,256L60,234.7C120,213,240,171,360,181.3C480,192,600,256,720,266.7C840,277,960,235,1080,224C1200,213,1320,235,1380,245.3L1440,256L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path>
